--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900,100,300,500|Roboto+Condensed:400,700,300|Roboto+Mono:400,700,500,300,100|Roboto+Slab:400,300,700,100' rel='stylesheet' type='text/css'>
+
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900,100,300,500|Roboto+Condensed:400,700,300|Roboto+Mono:400,700,500,300,100|Roboto+Slab:400,300,700,100" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
-  </head>
+    <title>Joe's Plumbing</title>
+</head>
 
 <body>
 </body>
+
 </html>
