Added Roboto Fonts locally. Started navigation bar and links with WebKit animations.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900,100,300,500|Roboto+Condensed:400,700,300|Roboto+Mono:400,700,500,300,100|Roboto+Slab:400,300,700,100" rel="stylesheet" type="text/css">
+    <link href="stylesheet.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title>Joe's Plumbing</title>
 </head>
 
 <body>
+    <nav>
+        <ul class="navbar">
+            <a class="navlink" href="index.html">
+                <li>Home</li>
+            </a>
+            <a class="navlink" href="about.html">
+                <li>About</li>
+            </a>
+            <a class="navlink" href="services.html">
+                <li>Services</li>
+            </a>
+            <a class="navlink" href="plans.html">
+                <li>Plans</li>
+            </a>
+            <a class="navlink" href="askjoe.html">
+                <li>Ask Joe</li>
+            </a>
+            <a class="navlink" href="contact.html">
+                <li>Contact</li>
+            </a>
+        </ul>
+    </nav>
 </body>
 
 </html>
