--- a/plans.html
+++ b/plans.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900,100,300,500|Roboto+Condensed:400,700,300|Roboto+Mono:400,700,500,300,100|Roboto+Slab:400,300,700,100" rel="stylesheet" type="text/css">
+    <link href="stylesheet.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title>Joe's Plumbing</title>
 </head>
