--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link href="stylesheet.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
-  <title>Joe's Plumbing</title>
+  <title>Joe the Plumber</title>
 </head>
 
 <body>
