--- a/plans.html
+++ b/plans.html
@@ -8,6 +8,28 @@
 </head>
 
 <body>
+  <nav>
+    <ul class="navbar">
+      <a class="navlink" href="index.html">
+        <li>Home</li>
+      </a>
+      <a class="navlink" href="about.html">
+        <li>About</li>
+      </a>
+      <a class="navlink" href="services.html">
+        <li>Services</li>
+      </a>
+      <a class="navlink" href="plans.html">
+        <li>Plans</li>
+      </a>
+      <a class="navlink" href="askjoe.html">
+        <li>Ask Joe</li>
+      </a>
+      <a class="navlink" href="contact.html">
+        <li>Contact</li>
+      </a>
+    </ul>
+  </nav>
 </body>
 
 </html>
