--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link href="stylesheet.css" rel="stylesheet" type="text/css">
+  <script src="menu.js"></script>
   <meta charset="utf-8">
   <title>Joe the Plumber</title>
 </head>
@@ -10,24 +11,13 @@
 <body>
   <nav>
     <ul class="navbar">
-      <a class="navlink" href="index.html">
-        <li>Home</li>
-      </a>
-      <a class="navlink" href="about.html">
-        <li>About</li>
-      </a>
-      <a class="navlink" href="services.html">
-        <li>Services</li>
-      </a>
-      <a class="navlink" href="plans.html">
-        <li>Plans</li>
-      </a>
-      <a class="navlink" href="askjoe.html">
-        <li>Ask Joe</li>
-      </a>
-      <a class="navlink" href="contact.html">
-        <li>Contact</li>
-      </a>
+      <div class="dropdown">
+        <navlink class="dropdown-button">About</navlink>
+        <div class="dropdown-content">
+          <a href="joegivesback.html"><li>Joe Gives Back</li></a>
+          <a href="joegivesback.html"><li>Joe Gives Back</li></a>
+        </div>
+      </div>
     </ul>
   </nav>
 </body>
