--- a/about.html
+++ b/about.html
@@ -3,33 +3,39 @@
 
 <head>
     <link href="stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
-    <title>Joe the Plumber</title>
+<title>Joe the Plumber</title>
+<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <nav>
-    <ul class="navbar">
-      <a class="navlink" href="index.html">
-        <li>Home</li>
-      </a>
-      <a class="navlink" href="about.html">
-        <li>About</li>
-      </a>
-      <a class="navlink" href="services.html">
-        <li>Services</li>
-      </a>
-      <a class="navlink" href="plans.html">
-        <li>Plans</li>
-      </a>
-      <a class="navlink" href="askjoe.html">
-        <li>Ask Joe</li>
-      </a>
-      <a class="navlink" href="contact.html">
-        <li>Contact</li>
-      </a>
+<ul id="MenuBar1" class="MenuBarVertical">
+  <li><a class="MenuBarItemSubmenu" href="#">Item 1</a>
+    <ul>
+      <li><a href="#">Item 1.1</a></li>
+      <li><a href="#">Item 1.2</a></li>
+      <li><a href="#">Item 1.3</a></li>
     </ul>
-  </nav>
+  </li>
+  <li><a href="#">Item 2</a></li>
+  <li><a class="MenuBarItemSubmenu" href="#">Item 3</a>
+    <ul>
+      <li><a class="MenuBarItemSubmenu" href="#">Item 3.1</a>
+        <ul>
+          <li><a href="#">Item 3.1.1</a></li>
+          <li><a href="#">Item 3.1.2</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Item 3.2</a></li>
+      <li><a href="#">Item 3.3</a></li>
+    </ul>
+  </li>
+  <li><a href="#">Item 4</a></li>
+</ul>
+<script type="text/javascript">
+var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
+</script>
 </body>
 
 </html>
