--- a/about.html
+++ b/about.html
@@ -2,40 +2,59 @@
 <html>
 
 <head>
-    <link href="stylesheet.css" rel="stylesheet" type="text/css">
-    <link href="SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css">
-    <meta charset="utf-8">
-<title>Joe the Plumber</title>
-<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+  <link href="stylesheet.css" rel="stylesheet" type="text/css">
+  <meta charset="utf-8">
+  <title>Joe the Plumber — About</title>
+  <script src="menu.js" type="text/javascript"></script>
 </head>
 
 <body>
-<ul id="MenuBar1" class="MenuBarVertical">
-  <li><a class="MenuBarItemSubmenu" href="#">Item 1</a>
-    <ul>
-      <li><a href="#">Item 1.1</a></li>
-      <li><a href="#">Item 1.2</a></li>
-      <li><a href="#">Item 1.3</a></li>
-    </ul>
-  </li>
-  <li><a href="#">Item 2</a></li>
-  <li><a class="MenuBarItemSubmenu" href="#">Item 3</a>
-    <ul>
-      <li><a class="MenuBarItemSubmenu" href="#">Item 3.1</a>
+  <nav>
+    <ul id="MenuBar1" class="MenuBarVertical">
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a class="MenuBarItemSubmenu" href="about.html">About</a>
         <ul>
-          <li><a href="#">Item 3.1.1</a></li>
-          <li><a href="#">Item 3.1.2</a></li>
+          <li>
+            <a href="joegivesback.html">Joe Gives Back</a>
+          </li>
         </ul>
       </li>
-      <li><a href="#">Item 3.2</a></li>
-      <li><a href="#">Item 3.3</a></li>
+      <li>
+        <a class="MenuBarItemSubmenu" href="services.html">Services</a>
+        <ul>
+          <li>
+            <a href="plumbing.html">Plumbing</a>
+          </li>
+          <li>
+            <a href="heating.html">Heating</a>
+          </li>
+          <li>
+            <a href="cooling.html">Cooling</a>
+          </li>
+          <li>
+            <a href="solar.html">Solar Heating</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="plans.html">Plans</a>
+      </li>
+      <li>
+        <a href="askjoe.html">Ask Joe</a>
+      </li>
+      <li>
+        <a href="contact.html">Contact</a>
+      </li>
     </ul>
-  </li>
-  <li><a href="#">Item 4</a></li>
-</ul>
-<script type="text/javascript">
-var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
-</script>
+    <script type="text/javascript">
+      var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
+        imgRight: "SpryAssets/SpryMenuBarRightHover.gif"
+      });
+    </script>
+  </nav>
 </body>
 
 </html>
