--- a/index.html
+++ b/index.html
@@ -3,21 +3,57 @@
 
 <head>
   <link href="stylesheet.css" rel="stylesheet" type="text/css">
-  <script src="menu.js"></script>
   <meta charset="utf-8">
-  <title>Joe the Plumber</title>
+  <title>Joe the Plumber — Home</title>
+  <script src="menu.js" type="text/javascript"></script>
 </head>
 
 <body>
   <nav>
-    <ul class="navbar">
-      <div class="dropdown">
-        <navlink class="dropdown-button">About</navlink>
-        <div class="dropdown-content">
-          <a href="joegivesback.html"><li>Joe Gives Back</li></a>
-        </div>
-      </div>
+    <ul id="MenuBar1" class="MenuBarVertical">
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a class="MenuBarItemSubmenu" href="about.html">About</a>
+        <ul>
+          <li>
+            <a href="joegivesback.html">Joe Gives Back</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a class="MenuBarItemSubmenu" href="services.html">Services</a>
+        <ul>
+          <li>
+            <a href="plumbing.html">Plumbing</a>
+          </li>
+          <li>
+            <a href="heating.html">Heating</a>
+          </li>
+          <li>
+            <a href="cooling.html">Cooling</a>
+          </li>
+          <li>
+            <a href="solar.html">Solar Heating</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="plans.html">Plans</a>
+      </li>
+      <li>
+        <a href="askjoe.html">Ask Joe</a>
+      </li>
+      <li>
+        <a href="contact.html">Contact</a>
+      </li>
     </ul>
+    <script type="text/javascript">
+      var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
+        imgRight: "SpryAssets/SpryMenuBarRightHover.gif"
+      });
+    </script>
   </nav>
 </body>
 
