--- a/services.html
+++ b/services.html
@@ -2,33 +2,58 @@
 <html>
 
 <head>
-    <link href="stylesheet.css" rel="stylesheet" type="text/css">
-    <meta charset="utf-8">
-    <title>Joe the Plumber</title>
+  <link href="stylesheet.css" rel="stylesheet" type="text/css">
+  <meta charset="utf-8">
+  <title>Joe the Plumber — Services</title>
+  <script src="menu.js" type="text/javascript"></script>
 </head>
 
 <body>
   <nav>
-    <ul class="navbar">
-      <a class="navlink" href="index.html">
-        <li>Home</li>
-      </a>
-      <a class="navlink" href="about.html">
-        <li>About</li>
-      </a>
-      <a class="navlink" href="services.html">
-        <li>Services</li>
-      </a>
-      <a class="navlink" href="plans.html">
-        <li>Plans</li>
-      </a>
-      <a class="navlink" href="askjoe.html">
-        <li>Ask Joe</li>
-      </a>
-      <a class="navlink" href="contact.html">
-        <li>Contact</li>
-      </a>
+    <ul id="MenuBar1" class="MenuBarVertical">
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a class="MenuBarItemSubmenu" href="about.html">About</a>
+        <ul>
+          <li>
+            <a href="joegivesback.html">Joe Gives Back</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a class="MenuBarItemSubmenu" href="services.html">Services</a>
+        <ul>
+          <li>
+            <a href="plumbing.html">Plumbing</a>
+          </li>
+          <li>
+            <a href="heating.html">Heating</a>
+          </li>
+          <li>
+            <a href="cooling.html">Cooling</a>
+          </li>
+          <li>
+            <a href="solar.html">Solar Heating</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="plans.html">Plans</a>
+      </li>
+      <li>
+        <a href="askjoe.html">Ask Joe</a>
+      </li>
+      <li>
+        <a href="contact.html">Contact</a>
+      </li>
     </ul>
+    <script type="text/javascript">
+      var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
+        imgRight: "SpryAssets/SpryMenuBarRightHover.gif"
+      });
+    </script>
   </nav>
 </body>
 
