--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <div class="header">
+
+<div class="logo">
+<img src="images/logo.svg" alt="logo" width="150px" height="150px"/>
+</div>
+  <div class="header">  
     One Call Does it All: (888) 555-HEAT
 </div>
     
