Which moron decided it was a good idea to save the logo in ISO-8859-1?

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
 
-<div class="logo">
-<img src="images/logo.svg" alt="logo" width="150px" height="150px"/>
-</div>
-  <div class="header">  
+  <div class="logo">
+    <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
+  </div>
+  <div class="header">
     One Call Does it All: (888) 555-HEAT
-</div>
-    
+  </div>
+
   <nav>
     <ul id="MenuBar1" class="MenuBarVertical">
       <li>
@@ -63,9 +63,18 @@
       });
     </script>
   </nav>
-    
+
   <div class="content">
-    <p>Joe the Plumber has a well-deserved reputation for quality plumbing services delivered promptly at an affordable price. All of our technicians are well trained, fully licensed and insured, and they are always courteous and trustworthy. Whether you own a home or run a business, Joe the Plumber is ready to meet your plumbing, heating, and cooling needs. From fixing a leaky faucet, to installing a cutting-edge solar energy system, all of our work comes with a 100% customer-satisfaction guarantee. Browse our services, call us for a free estimate, and see why, with Joe the Plumber, “one call does it all!”</p>
+    <p>Joe the Plumber has a well-deserved reputation for quality plumbing services delivered promptly at an affordable price. All of our technicians are well trained, fully licensed and insured, and they are always courteous and trustworthy. Whether you
+      own a home or run a business, Joe the Plumber is ready to meet your plumbing, heating, and cooling needs. From fixing a leaky faucet, to installing a cutting-edge solar energy system, all of our work comes with a 100% customer-satisfaction guarantee.
+      Browse our services, call us for a free estimate, and see why, with Joe the Plumber, “one call does it all!”</p>
+  </div>
+  <hr />
+  <div class="services">
+    <p>Services</p>
+    <ul>
+      <li>General Plumbing</li>
+    </ul>
   </div>
 </body>
 
