Added services list in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </ul>
     <script type="text/javascript">
       var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
-        imgRight: "SpryAssets/SpryMenuBarRightHover.gif"
+        imgRight: "images/SpryMenuBarRightHover.gif"
       });
     </script>
   </nav>
@@ -73,7 +73,18 @@
   <div class="services">
     <p>Services</p>
     <ul>
-      <li>General Plumbing</li>
+      <li>
+        <a href="plumbing.html">General Plumbing</a>
+      </li>
+      <li>
+        Heating
+      </li>
+      <li>
+        <a href="cooling.html">Cooling</a>
+      </li>
+      <li>
+        <a href="solar.html">Solar Heating <new>NEW!</new></a>
+      </li>
     </ul>
   </div>
 </body>
