added joe gives back

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       Browse our services, call us for a free estimate, and see why, with Joe the Plumber, “one call does it all!”</p>
   </div>
   <hr />
-  <div class="services">
+<div class="services">
     <p>Services</p>
     <ul>
       <li>
@@ -87,6 +87,16 @@
       </li>
     </ul>
   </div>
+  <div class="joegivesback">
+  Joe Gives Back
+With our deep roots in the community, we’re committed to helping our 
+neighbors. Read more >
+</div>
+  <div class="contactjoe">
+  Contact Joe
+Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. One call 
+does it all >
+</div>
 </body>
 
 </html>
