Basic styling for the index.html content

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <hr />
 <div class="services">
-    <p>Services</p>
+    <p class="section-title">Services</p>
     <ul>
       <li>
         <a href="plumbing.html">General Plumbing</a>
@@ -87,16 +87,10 @@
       </li>
     </ul>
   </div>
-  <div class="joegivesback">
-  Joe Gives Back
-With our deep roots in the community, we’re committed to helping our 
-neighbors. Read more >
+  <div class="givingback">
+      <p class="section-title">Joe Gives Back</p>
+<p>With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></p>
 </div>
-  <div class="contactjoe">
-  Contact Joe
-Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. One call 
-does it all >
-</div>
+    <div class="contact">Contact Joe</div>
 </body>
-
 </html>
