started about.html

--- a/about.html
+++ b/about.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+  <div class="logo">
+    <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
+  </div>
+  <div class="header">
+   Our Company
+  </div>
+
   <nav>
     <ul id="MenuBar1" class="MenuBarVertical">
       <li>
@@ -51,10 +58,24 @@
     </ul>
     <script type="text/javascript">
       var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
-        imgRight: "SpryAssets/SpryMenuBarRightHover.gif"
+        imgRight: "images/SpryMenuBarRightHover.gif"
       });
     </script>
   </nav>
+<div class="content">
+<p>In 1968, Joseph Manning, Sr. began working as an independent plumber out of his garage. His goal was simple: to provide quality, dependable, and affordable plumbing and heating services to residential customers. If he did that, he knew his business would grow.</p>
+
+<p>Today, Joe Manning, Jr. is still committed to the same level of service and quality that made his father a household name in the Albuquerque area. Along with our general plumbing services, we install and maintain heating and cooling systems, including solar thermal systems, and we offer residential and commercial maintenance management services.</p>
+<p>Joe the Plumber Facts</p>
+<ul>
+	<li>Family-owned and operated since 1968</li>
+    <li>Over 40 on-the-road licensed technicians and 15 support personnel</li>
+    <li>Winner of Regional Best Customer Service Award</li>
+    <li>24/7 service 365 days a year</li>
+    <li>All work comes with a 100% customer-satisfaction guarantee</li>
+    </ul>
+</div>
+
 </body>
 
 </html>
