--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </li>
     </ul>
   </div>
-  <div class="joegivesback">
+  <div class="givingback">
   Joe Gives Back
 With our deep roots in the community, we’re committed to helping our 
 neighbors. Read more >
