added navbar to pages

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <a class="MenuBarItemSubmenu" href="about.html">About</a>
         <ul>
           <li>
-            <a href="joegivesback.html">Joe Gives Back</a>
+            <a href="givingback.html">Joe Gives Back</a>
           </li>
         </ul>
       </li>
