--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="MenuBarItemSubmenu" href="about.html">About</a>
         <ul>
           <li>
-            <a href="joegivesback.html">Joe Gives Back</a>
+            <a href="givingback.html">Joe Gives Back</a>
           </li>
         </ul>
       </li>
@@ -77,7 +77,7 @@
         <a href="plumbing.html">General Plumbing</a>
       </li>
       <li>
-        Heating
+        <a href="heating.html">Heating</a>
       </li>
       <li>
         <a href="cooling.html">Cooling</a>
