--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+  <div class="logo">
+    <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
+  </div>
+  <div class="header">
+   Our Company
+  </div>
+
   <nav>
     <ul id="MenuBar1" class="MenuBarVertical">
       <li>
@@ -18,7 +25,7 @@
         <a class="MenuBarItemSubmenu" href="about.html">About</a>
         <ul>
           <li>
-            <a href="joegivesback.html">Joe Gives Back</a>
+            <a href="givingback.html">Joe Gives Back</a>
           </li>
         </ul>
       </li>
@@ -51,7 +58,7 @@
     </ul>
     <script type="text/javascript">
       var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
-        imgRight: "SpryAssets/SpryMenuBarRightHover.gif"
+        imgRight: "images/SpryMenuBarRightHover.gif"
       });
     </script>
   </nav>
