--- a/index.html
+++ b/index.html
@@ -87,18 +87,8 @@
       </li>
     </ul>
   </div>
-  <div class="givingback">
-  Joe Gives Back
-With our deep roots in the community, we’re committed to helping our 
-neighbors. Read more >
-</div>
-  <div class="contactjoe">
-  Contact Joe
-Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. One call 
-does it all >
       <p class="section-title">Joe Gives Back</p>
 <p>With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></p>
-</div>
-    <div class="contact">Contact Joe</div>
+    <p class="contact">Contact Joe</p>
 </body>
 </html>
