added content to joe gives back

--- a/givingback.html
+++ b/givingback.html
@@ -62,6 +62,25 @@
       });
     </script>
   </nav>
+  <div class="content">
+  <p>With deep roots in the community, Joe the Plumber is committed to helping organizations that support the good of our neighbors. Over the years, our company has partnered with several regional and national groups who contribute to the advancement of community health, wellness, and educational opportunities.</p>
+
+  <p>Each year, a percentage of our profits are shared with these organizations. In addition to our financial support, Joe the Plumber contributes pro bono services as needed to local charitable agencies.</p>
+  </div>
+  <div class="charity">
+  <p>Ronald McDonald House Charities of New Mexico</p>
+
+<p>The Ronald McDonald House Charities of New Mexico provide comfort, care, and a home away from home for families of children with medical needs.</p>
+
+<p>www.rmhc-nm.org</p>
+  </div>
+ <div class="charity">
+  <p>Goodwill Industries of New Mexico</p>
+
+  <p>Goodwill Industries provides skill development, work opportunities, and career-building services to people with barriers to employment.</p>
+  
+<p>www.goodwillnm.org</p>
+ </div>
 </body>
 
 </html>
