edited about page and started footer

--- a/about.html
+++ b/about.html
@@ -77,7 +77,8 @@
     <li>All work comes with a 100% customer-satisfaction guarantee</li>
     </ul>
     </div>
-
+    <div class="foot"> &copy;2016.Joe the Plumber, Inc. All Rights Reserved</div>
 </body>
+
 
 </html>
