Formatted some more stuff

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </ul>
   </div>
       <p class="section-title">Joe Gives Back</p>
-<p>With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></p>
-    <p class="contact">Contact Joe</p>
+<div class="text small-padding-top">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></div>
+    <div class="contact section-title-medium">Contact Joe</div>
+    <div class="text small-padding-top">Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. One call does it all</div>
 </body>
 </html>
