--- a/services.html
+++ b/services.html
@@ -62,6 +62,34 @@
       });
     </script>
   </nav>
+  <div class="content">
+  <p>Joe the Plumber provides a wide range of services for residential and commercial customers. Customer satisfaction is 100% guaranteed because our employees are dedicated to always doing the best possible job. Our hiring and training practices ensure that each Joe-the-Plumber technician is an expert in the field and is courteous and trustworthy.</p>
+
+<p>We pride ourselves on being up-to-date with the latest in technology and building code requirements. Since 2003, we have been a local leader in Solar Thermal Energy Systems.</p>
+
+<p>Give us a call. We would be proud to be of service. One call does it all!</p>
+  </div>
+  <div class="serivces">
+  Services
+  <ul>
+<li>General Plumbing</li>
+<li>Heating</li>
+<li>Cooling</li>
+<li>Solar Heating</li>
+</ul>
+</div>
+<div class="services">
+Service Plans
+<ul>
+<li>Basic Parts Plan</li>
+<li>Handyman Advantage Plan</li>
+<li>HVAC System Health Plan</li>
+</ul>
+</div>
+<div class="joegivesback">
+Joe Gives Back
+With deep roots in the community, we’re committed to helping our neighbors. Read more>
+</div>
 </body>
 
 </html>
