added joe gives back to about

--- a/about.html
+++ b/about.html
@@ -77,6 +77,8 @@
     <li>All work comes with a 100% customer-satisfaction guarantee</li>
     </ul>
     </div>
+<div class="section-title">Joe Gives Back</div>
+<div class="text small-padding-top">With our deep roots in the community, we’re committed to helping our neighbors. Read more &gt;</div>
     <div class="foot"> &copy;2016.Joe the Plumber, Inc. All Rights Reserved</div>
 </body>
 
