updated services content

--- a/services.html
+++ b/services.html
@@ -69,27 +69,32 @@
 
 <p>Give us a call. We would be proud to be of service. One call does it all!</p>
   </div>
-  <div class="serivces">
+  <div class="section-title">
   Services
+  </div>
   <ul>
+<div class="text small-padding-top">
 <li>General Plumbing</li>
 <li>Heating</li>
 <li>Cooling</li>
 <li>Solar Heating</li>
 </ul>
 </div>
-<div class="services">
+<div class="section-title">
 Service Plans
+</div>
 <ul>
+<div class="text small-padding-top">
 <li>Basic Parts Plan</li>
 <li>Handyman Advantage Plan</li>
 <li>HVAC System Health Plan</li>
 </ul>
 </div>
-<div class="joegivesback">
+<div class="section-title">
 Joe Gives Back
-With deep roots in the community, we’re committed to helping our neighbors. Read more>
 </div>
+<div class="text small-padding-top">
+With deep roots in the community, we’re committed to helping our neighbors. Read more&gt; </div>
 </body>
 
 </html>
