updated joe gives back content

--- a/givingback.html
+++ b/givingback.html
@@ -67,18 +67,14 @@
 
   <p>Each year, a percentage of our profits are shared with these organizations. In addition to our financial support, Joe the Plumber contributes pro bono services as needed to local charitable agencies.</p>
   </div>
-  <div class="charity">
-  <p>Ronald McDonald House Charities of New Mexico</p>
+    <div class="section-title"><p>Ronald McDonald House Charities of New Mexico</p></div>
 
-<p>The Ronald McDonald House Charities of New Mexico provide comfort, care, and a home away from home for families of children with medical needs.</p>
-
+<div class="text small-padding-top"><p>The Ronald McDonald House Charities of New Mexico provide comfort, care, and a home away from home for families of children with medical needs.</p>
 <p>www.rmhc-nm.org</p>
   </div>
- <div class="charity">
-  <p>Goodwill Industries of New Mexico</p>
+  <div class="section-title"><p>Goodwill Industries of New Mexico</p></div>
 
-  <p>Goodwill Industries provides skill development, work opportunities, and career-building services to people with barriers to employment.</p>
-  
+  <div class="text small-padding-top"><p>Goodwill Industries provides skill development, work opportunities, and career-building services to people with barriers to employment.</p>
 <p>www.goodwillnm.org</p>
  </div>
 </body>
