--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
       </li>
     </ul>
   </div>
-      <p class="section-title">Joe Gives Back</p>
-<div class="text small-padding-top">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></div>
+    <div class="secondary-container">
+      <div class="section-title-medium">Joe Gives Back</div>
+<div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></div>
     <div class="contact section-title-medium">Contact Joe</div>
-    <div class="text small-padding-top">Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. One call does it all</div>
+    <div class="text large-padding-bottom small-padding-top">Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. <a href="contact.html">One call does it all &gt</a></div>
+    </div>
 </body>
 </html>
