--- a/about.html
+++ b/about.html
@@ -77,9 +77,11 @@
     <li>All work comes with a 100% customer-satisfaction guarantee</li>
     </ul>
     </div>
-<div class="section-title">Joe Gives Back</div>
-<div class="text small-padding-top">With our deep roots in the community, we’re committed to helping our neighbors. Read more &gt;</div>
-    <div class="foot"> &copy;2016.Joe the Plumber, Inc. All Rights Reserved</div>
+<div class="section-title-medium">Joe Gives Back</div>
+<div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt </a></div>
+    <div class="foot"> <p>&copy;2016.Joe the Plumber, Inc. All Rights Reserved</p><p>Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710 </p><div class="footercontainer">
+    <ul><li>Phone:(888) 555-HEAT</li><li>Fax:(957) 555-HEAT</li><li>Email: contact@joetheplumber.com</li></ul></div>
+    </div>
 </body>
 
 
