--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   </div>
   <hr />
 <div class="services">
-    <p class="section-title">Services</p>
-    <ul>
+  <p class="section-title">Services</p>
+  <ul>
       <li>
         <a href="plumbing.html">General Plumbing</a>
       </li>
@@ -86,7 +86,9 @@
         <a href="solar.html">Solar Heating <new>NEW!</new></a>
       </li>
     </ul>
-  </div>
+    <div class="image left">
+    </div>
+</div>
     <div class="secondary-container">
       <div class="section-title-medium">Joe Gives Back</div>
 <div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></div>
