--- a/cooling.html
+++ b/cooling.html
@@ -13,7 +13,7 @@
     <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
   </div>
   <div class="header">
-   Our Company
+   Cooling Services
   </div>
 
   <nav>
