Added footer to all pages

--- a/index.html
+++ b/index.html
@@ -2,98 +2,108 @@
 <html>
 
 <head>
-  <link href="stylesheet.css" rel="stylesheet" type="text/css">
-  <meta charset="utf-8">
-  <title>Joe the Plumber — Home</title>
-  <script src="menu.js" type="text/javascript"></script>
+    <link href="stylesheet.css" rel="stylesheet" type="text/css">
+    <meta charset="utf-8">
+    <title>Joe the Plumber — Home</title>
+    <script src="menu.js" type="text/javascript"></script>
 </head>
 
 <body>
 
-  <div class="logo">
-    <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
-  </div>
-  <div class="header">
-    One Call Does it All: (888) 555-HEAT
-  </div>
-
-  <nav>
-    <ul id="MenuBar1" class="MenuBarVertical">
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a class="MenuBarItemSubmenu" href="about.html">About</a>
-        <ul>
-          <li>
-            <a href="givingback.html">Joe Gives Back</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a class="MenuBarItemSubmenu" href="services.html">Services</a>
-        <ul>
-          <li>
-            <a href="plumbing.html">Plumbing</a>
-          </li>
-          <li>
-            <a href="heating.html">Heating</a>
-          </li>
-          <li>
-            <a href="cooling.html">Cooling</a>
-          </li>
-          <li>
-            <a href="solar.html">Solar Heating</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="plans.html">Plans</a>
-      </li>
-      <li>
-        <a href="askjoe.html">Ask Joe</a>
-      </li>
-      <li>
-        <a href="contact.html">Contact</a>
-      </li>
-    </ul>
-    <script type="text/javascript">
-      var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
-        imgRight: "images/SpryMenuBarRightHover.gif"
-      });
-    </script>
-  </nav>
-
-  <div class="content">
-    <p>Joe the Plumber has a well-deserved reputation for quality plumbing services delivered promptly at an affordable price. All of our technicians are well trained, fully licensed and insured, and they are always courteous and trustworthy. Whether you
-      own a home or run a business, Joe the Plumber is ready to meet your plumbing, heating, and cooling needs. From fixing a leaky faucet, to installing a cutting-edge solar energy system, all of our work comes with a 100% customer-satisfaction guarantee.
-      Browse our services, call us for a free estimate, and see why, with Joe the Plumber, “one call does it all!”</p>
-  </div>
-  <hr />
-<div class="services">
-  <p class="section-title">Services</p>
-  <ul>
-      <li>
-        <a href="plumbing.html">General Plumbing</a>
-      </li>
-      <li>
-        <a href="heating.html">Heating</a>
-      </li>
-      <li>
-        <a href="cooling.html">Cooling</a>
-      </li>
-      <li>
-        <a href="solar.html">Solar Heating <new>NEW!</new></a>
-      </li>
-    </ul>
-    <div class="image left">
+    <div class="logo">
+        <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
     </div>
-</div>
+    <div class="header">
+        One Call Does it All: (888) 555-HEAT
+    </div>
+
+    <nav>
+        <ul id="MenuBar1" class="MenuBarVertical">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a class="MenuBarItemSubmenu" href="about.html">About</a>
+                <ul>
+                    <li>
+                        <a href="givingback.html">Joe Gives Back</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a class="MenuBarItemSubmenu" href="services.html">Services</a>
+                <ul>
+                    <li>
+                        <a href="plumbing.html">Plumbing</a>
+                    </li>
+                    <li>
+                        <a href="heating.html">Heating</a>
+                    </li>
+                    <li>
+                        <a href="cooling.html">Cooling</a>
+                    </li>
+                    <li>
+                        <a href="solar.html">Solar Heating</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="plans.html">Plans</a>
+            </li>
+            <li>
+                <a href="askjoe.html">Ask Joe</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+        <script type="text/javascript">
+            var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
+                imgRight: "images/SpryMenuBarRightHover.gif"
+            });
+        </script>
+    </nav>
+
+    <div class="content">
+        <p>Joe the Plumber has a well-deserved reputation for quality plumbing services delivered promptly at an affordable price. All of our technicians are well trained, fully licensed and insured, and they are always courteous and trustworthy. Whether you own a home or run a business, Joe the Plumber is ready to meet your plumbing, heating, and cooling needs. From fixing a leaky faucet, to installing a cutting-edge solar energy system, all of our work comes with a 100% customer-satisfaction guarantee. Browse our services, call us for a free estimate, and see why, with Joe the Plumber, “one call does it all!”</p>
+    </div>
+    <hr />
+    <div class="services">
+        <p class="section-title">Services</p>
+        <ul>
+            <li>
+                <a href="plumbing.html">General Plumbing</a>
+            </li>
+            <li>
+                <a href="heating.html">Heating</a>
+            </li>
+            <li>
+                <a href="cooling.html">Cooling</a>
+            </li>
+            <li>
+                <a href="solar.html">Solar Heating <new>NEW!</new></a>
+            </li>
+        </ul>
+        <div class="image left">
+        </div>
+    </div>
     <div class="secondary-container">
-      <div class="section-title-medium">Joe Gives Back</div>
-<div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt </a></div>
-    <div class="contact section-title-medium">Contact Joe</div>
-    <div class="text large-padding-bottom small-padding-top">Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. <a href="contact.html">One call does it all &gt </a></div>
+        <div class="section-title-medium">Joe Gives Back</div>
+        <div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt</a></div>
+        <div class="contact section-title-medium">Contact Joe</div>
+        <div class="text large-padding-bottom small-padding-top">Joe the Plumber is on call 24 hours a day, 7 days a week, 365 days a year. <a href="contact.html">One call does it all &gt</a></div>
+    </div>
+    <div class="foot">
+        <div class="foot-right">
+            <ul>
+                <li>Phone: (888) 555-HEAT</li>
+                <li>Fax: (957) 555-HEAT</li>
+                <li>Email: contact@joetheplumber.com</li>
+            </ul>
+        </div>
+        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
+        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
     </div>
 </body>
+
 </html>
