--- a/services.html
+++ b/services.html
@@ -95,6 +95,17 @@ Joe Gives Back
 </div>
 <div class="text small-padding-top">
 With deep roots in the community, we’re committed to helping our neighbors. Read more&gt; </div>
+    <div class="foot">
+        <div class="foot-right">
+            <ul>
+                <li>Phone: (888) 555-HEAT</li>
+                <li>Fax: (957) 555-HEAT</li>
+                <li>Email: contact@joetheplumber.com</li>
+            </ul>
+        </div>
+        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
+        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
+    </div>
 </body>
 
 </html>
