--- a/about.html
+++ b/about.html
@@ -79,8 +79,16 @@
     </div>
 <div class="section-title-medium">Joe Gives Back</div>
 <div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt </a></div>
-    <div class="foot"> <p>&copy;2016.Joe the Plumber, Inc. All Rights Reserved</p><p>Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710 </p><div class="footercontainer">
-    <ul><li>Phone:(888) 555-HEAT</li><li>Fax:(957) 555-HEAT</li><li>Email: contact@joetheplumber.com</li></ul></div>
+    <div class="foot">
+        <div class="foot-right">
+            <ul>
+                <li>Phone: (888) 555-HEAT</li>
+                <li>Fax: (957) 555-HEAT</li>
+                <li>Email: contact@joetheplumber.com</li>
+            </ul>
+        </div>
+        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
+        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
     </div>
 </body>
 
