--- a/givingback.html
+++ b/givingback.html
@@ -77,6 +77,17 @@
   <div class="text small-padding-top"><p>Goodwill Industries provides skill development, work opportunities, and career-building services to people with barriers to employment.</p>
 <p>www.goodwillnm.org</p>
  </div>
+<div class="foot">
+        <div class="foot-right">
+            <ul>
+                <li>Phone: (888) 555-HEAT</li>
+                <li>Fax: (957) 555-HEAT</li>
+                <li>Email: contact@joetheplumber.com</li>
+            </ul>
+        </div>
+        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
+        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
+    </div>
 </body>
 
 </html>
