worked on services

--- a/givingback.html
+++ b/givingback.html
@@ -67,15 +67,17 @@
 
   <p>Each year, a percentage of our profits are shared with these organizations. In addition to our financial support, Joe the Plumber contributes pro bono services as needed to local charitable agencies.</p>
   </div>
-    <div class="section-title"><p>Ronald McDonald House Charities of New Mexico</p></div>
+  <div class="charities">  
+    <div class="section-title-medium"><p>Ronald McDonald House Charities of New Mexico</p></div>
 
 <div class="text small-padding-top"><p>The Ronald McDonald House Charities of New Mexico provide comfort, care, and a home away from home for families of children with medical needs.</p>
-<p>www.rmhc-nm.org</p>
+<a href="www.rmhc-nm.org" target="_blank">www.rmhc-nm.org</a>
   </div>
-  <div class="section-title"><p>Goodwill Industries of New Mexico</p></div>
+  <div class="section-title-medium"><p>Goodwill Industries of New Mexico</p></div>
 
   <div class="text small-padding-top"><p>Goodwill Industries provides skill development, work opportunities, and career-building services to people with barriers to employment.</p>
-<p>www.goodwillnm.org</p>
+<a href="www.goodwillnm.org" target="_blank">www.goodwillnm.org</a>
+ </div>
  </div>
 </body>
 
