--- a/services.html
+++ b/services.html
@@ -1,100 +1,72 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <link href="stylesheet.css" rel="stylesheet" type="text/css">
-  <meta charset="utf-8">
-  <title>Joe the Plumber — Services</title>
-  <script src="menu.js" type="text/javascript"></script>
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>Joe the Plumber — Services</title>
+<script src="menu.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <div class="logo">
-    <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
-  </div>
-  <div class="header">
-   Services
-  </div>
-
-  <nav>
-    <ul id="MenuBar1" class="MenuBarVertical">
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a class="MenuBarItemSubmenu" href="about.html">About</a>
-        <ul>
-          <li>
-            <a href="givingback.html">Joe Gives Back</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a class="MenuBarItemSubmenu" href="services.html">Services</a>
-        <ul>
-          <li>
-            <a href="plumbing.html">Plumbing</a>
-          </li>
-          <li>
-            <a href="heating.html">Heating</a>
-          </li>
-          <li>
-            <a href="cooling.html">Cooling</a>
-          </li>
-          <li>
-            <a href="solar.html">Solar Heating</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="plans.html">Plans</a>
-      </li>
-      <li>
-        <a href="askjoe.html">Ask Joe</a>
-      </li>
-      <li>
-        <a href="contact.html">Contact</a>
-      </li>
-    </ul>
-    <script type="text/javascript">
+<div class="logo"> <img src="images/logo.svg" alt="logo" width="150px" height="150px" /> </div>
+<div class="header"> Services </div>
+<nav>
+  <ul id="MenuBar1" class="MenuBarVertical">
+    <li> <a href="index.html">Home</a> </li>
+    <li> <a class="MenuBarItemSubmenu" href="about.html">About</a>
+      <ul>
+        <li> <a href="givingback.html">Joe Gives Back</a> </li>
+      </ul>
+    </li>
+    <li> <a class="MenuBarItemSubmenu" href="services.html">Services</a>
+      <ul>
+        <li> <a href="plumbing.html">Plumbing</a> </li>
+        <li> <a href="heating.html">Heating</a> </li>
+        <li> <a href="cooling.html">Cooling</a> </li>
+        <li> <a href="solar.html">Solar Heating</a> </li>
+      </ul>
+    </li>
+    <li> <a href="plans.html">Plans</a> </li>
+    <li> <a href="askjoe.html">Ask Joe</a> </li>
+    <li> <a href="contact.html">Contact</a> </li>
+  </ul>
+  <script type="text/javascript">
       var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
         imgRight: "images/SpryMenuBarRightHover.gif"
       });
-    </script>
-  </nav>
-  <div class="content">
+    </script> 
+</nav>
+<div class="content">
   <p>Joe the Plumber provides a wide range of services for residential and commercial customers. Customer satisfaction is 100% guaranteed because our employees are dedicated to always doing the best possible job. Our hiring and training practices ensure that each Joe-the-Plumber technician is an expert in the field and is courteous and trustworthy.</p>
-
-<p>We pride ourselves on being up-to-date with the latest in technology and building code requirements. Since 2003, we have been a local leader in Solar Thermal Energy Systems.</p>
-
-<p>Give us a call. We would be proud to be of service. One call does it all!</p>
-  </div>
-  <div class="section-title">
-  Services
-  </div>
-  <ul>
-<div class="text small-padding-top">
-<li>General Plumbing</li>
-<li>Heating</li>
-<li>Cooling</li>
-<li>Solar Heating</li>
-</ul>
+  <p>We pride ourselves on being up-to-date with the latest in technology and building code requirements. Since 2003, we have been a local leader in Solar Thermal Energy Systems.</p>
+  <p><a href="contact.html">Give us a call.</a> We would be proud to be of service. One call does it all!</p>
 </div>
-<div class="section-title">
-Service Plans
-</div>
+<div class="services">
+    <p class="section-title">Services</p>
+    <ul>
+      <li>
+        <a href="plumbing.html">General Plumbing</a>
+      </li>
+      <li>
+        <a href="heating.html">Heating</a>
+      </li>
+      <li>
+        <a href="cooling.html">Cooling</a>
+      </li>
+      <li>
+        <a href="solar.html">Solar Heating <new>NEW!</new></a>
+      </li>
+    </ul>
+  </div>
+<div class="section-title-medium"> <a href="plans.html">Service Plans</a> </div>
 <ul>
-<div class="text small-padding-top">
-<li>Basic Parts Plan</li>
-<li>Handyman Advantage Plan</li>
-<li>HVAC System Health Plan</li>
+  <div class="text small-padding-top">
+  <li>Basic Parts Plan</li>
+  <li>Handyman Advantage Plan</li>
+  <li>HVAC System Health Plan</li>
 </ul>
 </div>
-<div class="section-title">
-Joe Gives Back
-</div>
-<div class="text small-padding-top">
-With deep roots in the community, we’re committed to helping our neighbors. Read more&gt; </div>
+<div class="section-title-medium"> Joe Gives Back </div>
+<div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt </a></div>
 </body>
-
 </html>
