added content to the service tabs

--- a/cooling.html
+++ b/cooling.html
@@ -62,17 +62,22 @@
       });
     </script>
   </nav>
-    <div class="foot">
-        <div class="foot-right">
-            <ul>
-                <li>Phone: (888) 555-HEAT</li>
-                <li>Fax: (957) 555-HEAT</li>
-                <li>Email: contact@joetheplumber.com</li>
-            </ul>
-        </div>
-        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
-        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
-    </div>
+  <div class="content">
+  <div class="section-title">Don’t lose your cool!
+  </div>
+  Let Joe the Plumber install or service your home or business’ energy-efficient air conditioning. Cooling systems require as much TLC as your boiler. With the right equipment, installment configuration, and maintenance, a cooling system can run quietly, smoothly, and cost-efficiently. No matter the issue, we never lose our cool! Some of our cooling services include:
+<ul>
+
+<li>Energy-efficient central cooling system installation
+
+<li>Service, repair, and replacement of cooling system equipment
+
+<li>Freon gas leak detection and repair
+
+<li>Air quality filtration system analysis, installation, maintenance, or repair
+
+</ul>
+</div>
 </body>
 
 </html>
