--- a/plumbing.html
+++ b/plumbing.html
@@ -62,17 +62,22 @@
       });
     </script>
   </nav>
-    <div class="foot">
-        <div class="foot-right">
-            <ul>
-                <li>Phone: (888) 555-HEAT</li>
-                <li>Fax: (957) 555-HEAT</li>
-                <li>Email: contact@joetheplumber.com</li>
-            </ul>
-        </div>
-        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
-        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
-    </div>
-</body>
+  <div class="section-title">
+  Plumbing Services
+  </div>
+  <div class="content">
+  It seems most people need a plumber only in an emergency! 
+The sink is backed up, or you have no hot water... No matter what the problem, or the time of day or night, Joe the Plumber’s technicians are on call 24 hours a day, 7 days a week, 365 days a year. With over 40 on-the-road technicians, Joe the Plumber is prepared to meet every plumbing need. Some of our plumbing services include:
+<ul>
+<li>Kitchen, bath, and laundry room upgrades or installation</li>
 
+<li>Dishwasher, disposal, and washer and dryer installation or repair</li>
+
+<li>Piping installation, replacement, or repair</li>
+
+<li>Water filtering system installation or repair</li>
+
+<li>Underground lawn sprinkler installation or repair</li>
+</body>
+</ul>
 </html>
