--- a/heating.html
+++ b/heating.html
@@ -62,17 +62,20 @@
       });
     </script>
   </nav>
-    <div class="foot">
-        <div class="foot-right">
-            <ul>
-                <li>Phone: (888) 555-HEAT</li>
-                <li>Fax: (957) 555-HEAT</li>
-                <li>Email: contact@joetheplumber.com</li>
-            </ul>
-        </div>
-        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
-        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
-    </div>
+  <div class="content">
+  Keeping warm when it’s cold outside should be hassle free.
+That’s why Joe the Plumber recommends installing fuel-efficient heating systems, and their technicians are experienced in maintaining and repairing all gas, oil, and electrical heating equipment. Give Joe the Plumber a call. We’re ready to give you unsurpassed service at a competitive price. Some of our heating services include:
+<ul>
+<li>Energy-efficient boiler, burner, and water heater installation</li>
+
+<li>Oil, gas, and electric heating equipment maintenance or repair </li>
+
+<li>Oil to gas or electric to gas conversions</li>
+
+<li>Air-quality filtration system analysis, installation, 
+maintenance, or repair</li>
+</ul>
+</div>
 </body>
 
 </html>
