--- a/solar.html
+++ b/solar.html
@@ -62,17 +62,19 @@
       });
     </script>
   </nav>
-    <div class="foot">
-        <div class="foot-right">
-            <ul>
-                <li>Phone: (888) 555-HEAT</li>
-                <li>Fax: (957) 555-HEAT</li>
-                <li>Email: contact@joetheplumber.com</li>
-            </ul>
-        </div>
-        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
-        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
-    </div>
+  <div class="section-title">
+  Solar Heating Services
+  </div>
+  <div class="content">
+Tired of the never-ending rise in heating fuel costs?
+So are we. That’s why Joe the Plumber has become a leader in the installation of Solar Thermal Energy Systems. Harnessing the sun’s power for your water-heating needs not only reduces your carbon footprint, but saves you money. Studies show that households and businesses can save as much as 75% on their water-heating costs with the right solar thermal system. Some of our solar heating services include:
+<ul>
+<li>Site evaluation</li>
+<li>System design and installation</li>
+<li>Service, repair, and replacement of system equipment</li>
+<li>Help with obtaining grants, rebates, and state and federal energy tax credits</li>
+</ul>
+</div>
 </body>
 
 </html>
