added content to plans, askjoe, and contact

--- a/askjoe.html
+++ b/askjoe.html
@@ -62,17 +62,24 @@
       });
     </script>
   </nav>
-    <div class="foot">
-        <div class="foot-right">
-            <ul>
-                <li>Phone: (888) 555-HEAT</li>
-                <li>Fax: (957) 555-HEAT</li>
-                <li>Email: contact@joetheplumber.com</li>
-            </ul>
-        </div>
-        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
-        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
-    </div>
+  <div class="content">
+  Ask Joe
+
+If you don’t ask, we can’t help. Take a look at some of Joe’s Top 5 FAQs. If you don’t see your question listed here, no worries, call (888) 555-HEAT anytime. And if Joe doesn’t know, he knows who does!
+<ol>
+<li>How can I prevent my pipes from freezing?</li>
+<li>If my pipes burst, what should I do to stop the flooding?</li>
+<li>My washing machine smells like a sewer. What can I do?</li>
+<li>What size air conditioner do I need?</li>
+<li>My hot water keeps running out. Do I need a larger water heater?</li>
+<ol>
+
+A1: Begin by insulating the pipes that are located on outside walls. And, if you have had previous problems with freezing, leave a faucet trickling warm water.
+A2: In the event a pipe bursts, turn off the closest shut-off valve or your main water shut-off valve until a professional can arrive.
+A3: Front loading washers sometimes develop mold around the thick gasket that seals the front door. Inspect the gasket itself and use bleach to disinfect.
+A4: A load calculation must be performed on your home to determine the proper system size that meets all the physical requirements. Ultimately, the size determination should be made by a qualified air conditioning specialist.
+A5: There are many reasons why you may be running out of hot water. Before installing a larger heater, one of our technicians can analyze your options.
+</div>
 </body>
 
 </html>
