--- a/plans.html
+++ b/plans.html
@@ -62,6 +62,42 @@
       });
     </script>
   </nav>
+  <div class="content">
+  Service Plans
+
+It is essential to keep your home properly maintained to preserve its value and to give you peace of mind. Every heating and cooling system needs regular maintenance to reduce the chance of breakdown and to keep it running efficiently. If a problem does arise, you want help to be only a phone call away.  
+
+Joe the Plumber’s Service & Maintenance Plans give you security and protect the investment in your home. Our plans are tailored to meet your needs.
+
+Basic Parts Plan: $125 / year
+<ul>
+<li>Priority service that moves you to the front of the line</li>
+
+<li>Replacement parts as described in the Equipment Parts Covered list</li>
+
+<li>Labor not included</li>
+
+Handyman Advantage Plan: $175 / year
+
+<li>Priority service that moves you to the front of the line</li>
+
+<li>Replacement parts as described in the Equipment Parts Covered list</li>
+
+<li>Labor required to repair or replace the items covered</li>
+
+HVAC System Health Plan: $225 / year
+
+<li>Priority service that moves you to the front of the line</li>
+
+<li>Replacement parts as described in the Equipment Parts Covered list</li>
+
+<li>Labor required to repair or replace the items covered</li>
+
+<li>Includes yearly equipment tune-up and inspection</li>
+</ul>
+Joe Gives Back
+With deep roots in the community, we’re committed to helping our neighbors. Read more>
+</div>
 </body>
 
 </html>
