--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,18 @@
       });
     </script>
   </nav>
+  <div class="content">
+  Contact us
+
+The quickest way to schedule a service appointment is to contact our office:
+Email: contact@joetheplumber.com
+Phone: (888) 555-HEAT
+Fax: (957) 555-HEAT
+Mail: Joe the Plumber, Inc.
+5255 Warwick Avenue
+ Albuquerque, NM 87101
+Or, complete the form below and we will contact you within 24 hours.
+</div>
 </body>
 
 </html>
